--- a/css/styles.css
+++ b/css/styles.css
@@ -1,231 +1,217 @@
+:root {
+    --iris: #4d5ae5;
+    --navyblue: #2e2f42;
+    --ocean: #404bbf;
+    --white: #fff;
+    --slate: #434455;
+    --cornflower: #e7e9fc;
+    --cloud: #f4f4fd;
+}
+
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
 /*LOGO-WEB*/
-.webstudio-link-a,   {
+.webstudio-web {
+    text-transform: uppercase;
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
     font-weight: 800;
-    line-height: 21px;
-    color: #4D5AE5;
-    text-decoration: none;
+    line-height: 1.3;
+    color: var(--ocean);
 }
 
 /*LOGO-STUDIO*/
-.webstudio-link-b {
-    color: #2E2F42;
+.webstudio-studio {
+    text-transform: uppercase;
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
-    font-style: normal;
     font-weight: 800;
-    line-height: 21px;       /* 116.667% */
+    line-height: 1.3;
     letter-spacing: 0.54px;
-    text-transform: uppercase;
+    padding-right: 76;
+    color:var(--navyblue);
 }
 
 
-/*LINKS*/
 a {
     text-decoration: none;
 }
 
-ul, li {
-    font-family: Roboto;
+.top-header,
+.header-nav {
+    display: flex; 
+}
+
+.header {
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+.header-list {
+    gap: 40px;
+    display: flex;
     list-style: none;
-    padding: 0;
-    margin: 0;
+
 }
 
-.link {
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
+.header .header-nav {
+    gap: 40px;
+}
+
+.header-link {
     font-weight: 500;
-    line-height: 24px;
-    /* 150% */
+    line-height: 1.5;         /* 150% */
     letter-spacing: 0.32px;
-    color: #2E2F42;
+    color: var(--navyblue);
+    list-style: none;
 }
 
-.header-contacts {
+.header-link:hover, 
+.header-link:focus {
+    color: var(--ocean);
+}
+
+.active {
+    color: var(--ocean);
+}
+
+.contact-info {
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: 24px;
-    /* 150% */
+    line-height: 24px;     /* 150% */
     letter-spacing: 0.32px;
     color: #2E2F42;
+    list-style: none;
+    padding-left: 0;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
 }
 
-.link:hover {
-    color: #4D5AE5;
-}
-
-.header-contacts:hover {
-    color: #4D5AE5;
-}
-
-/*MAIN-SECTION*/
-
-.main-top {
-    background-color: #2E2F42;
-    align-content: center;
-}
-
-/*MAIN-SECTION BUTTON*/
-
-
-button {
-    /* Button Text */
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    color: #4D5AE5;
-    line-height: 24px;
-    /* 150% */
-    letter-spacing: 0.64px;
-    display: inline-flex;
-    padding: 16px 32px;
-    align-items: center;
-    gap: 10px;
-}
-
-.order-service-btn {
-    cursor: pointer;
-    border-radius: 4px margin-bottom: 2px
-}
-
-.order-service-btn:hover {
-    border-radius: 4px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    color: var(--WHITE, #FFF);
-    background: var(--OCEAN, #404BBF);
-}
-
-h1 {
-    color: #FFF;
+.main {
+    padding-top: 188px;
+    padding-bottom: 188px;
     text-align: center;
-    /* Header 1 */
-    font-family: Roboto;
+}
+
+.main-top-text {
+    color: var(--white);
+    text-align: center;
     font-size: 56px;
-    font-style: normal;
     font-weight: 700;
     line-height: 60px;
     /* 107.143% */
     letter-spacing: 1.12px;
-}
-
-h2 {
-    color: var(--NAVY-BLUE, #2E2F42);
-    text-align: center;
-    /* Header 2 */
-    font-family: Roboto;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 40px;
-    /* 111.111% */
-    letter-spacing: 0.72px;
-    text-transform: capitalize;
-}
-
-h3 {
-    color: #2E2F42;
-    /* Header 3 */
-    font-family: Roboto;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px;
-    /* 120% */
-    letter-spacing: 0.4px;
-}
-
-p {
-    color: #434455;
-    /* Body */
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    /* 150% */
-    letter-spacing: 0.32px;
-}
-
-/*END OF MAIN*/
-
-/*PORTFOLIO*/
-
-.portfolio-buttons {
-    text-align: center;
-    align-items: center;
-    gap: 24px;
-    text-align: center;
-}
-
-.btn {
-    /* Button Text */
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px;
-    /* 150% */
-    letter-spacing: 0.64px;
-    border-radius: 4px;
-}
-
-.btn:hover {
-    color: #FFF;
-    text-align: center;
-    /* Button Text */
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px;
-    /* 150% */
-    letter-spacing: 0.64px;
-    border-radius: 4px;
-    background: #4D5AE5;
-}
-
-/*END OF PORTFOLIO*/
-
-
-
-
-/*FOOTER*/
-.footer {
-    background: #2E2F42;
-    /* Body */
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    /* 150% */
-    letter-spacing: 0.32px;
-}
-
-.footer p {
-    color: #F4F4FD;
-}
-
-.webstudio-link-bottom {
-    color: #F4F4FD;
-    font-family: Raleway;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 800;
-    line-height: 21px;
-    /* 116.667% */
-    letter-spacing: 0.54px;
     text-transform: uppercase;
 }
 
-/*END OF FOOTER*/
+.top {
+    background-color: var(--navyblue);
+}
+
+.order-service-btn {
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    color:var(--white);
+    line-height: 24px;
+    /* 150% */
+    letter-spacing: 0.64px;
+    display: inline-flex;
+
+    background-color: var(--iris);
+    border: none;
+    border-radius: 4px;
+    color: var(--white);
+    padding: 16px 32px;
+}
+
+.order-service-btn:hover {
+        background-color: var(--cloud);
+        border: none;
+        border-radius: 4px;
+        color: var(--white);
+        padding: 16px 32px;
+        color: var(--ocean);
+    }
+
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.service {
+    list-style: none;
+    padding-left: 100px;
+    padding-right: 100px;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+.service li {
+    text-align: left;
+}
+
+.section-title {
+    color: var(--NAVYBLUE, #2e2f42);
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 2.5;     /* 111.111% */
+    letter-spacing: 0.72px;
+
+.service-desc {
+    color: var(--SLATE, #434455);
+    line-height: 1.5;         /* 150% */
+    letter-spacing: 0.32px;
+    text-align: left;
+}
+
+
+
+.bg {
+    background-color: var(--navyblue);
+}
+
+.container {
+    width: 1158px;
+}
+
+.main-team {
+    background: #e7e9fc;
+}
+
+
+.team-name {
+    color: #2e2f42;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.5;     /* 120% */
+    letter-spacing: 0.4px;
+    text-align: center;
+}
+
+/*FOOTER*/
+.footer-bg {
+    background-color: #2e2f42;
+    padding-top: 70px;
+    padding-bottom: 70px;
+    padding-left: 70px;
+}
+
+.footer p {
+    color: var(--cloud)
+    line-height: 1.5;
+    letter-spacing: 0.32px;
+}
+
+.webstudio-studio-footer {
+    color: var(--cloud);
+}
