--- a/css/styles.css
+++ b/css/styles.css
@@ -1,231 +1,167 @@
+:root {
+    --NAVY-BLUE: #2E2F42;
+    --CLOUD: #F4F4FD;
+    --CORNFLOWER: #E7E9FC;
+    --WHITE: #FFFFFF;
+    --SLATE: #434455;
+    --OCEAN: #404BBF;
+    --IRIS: #4D5AE5;
+
+}
+
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
-/*LOGO-WEB*/
-.webstudio-link-a,   {
-    font-family: 'Raleway', sans-serif;
-    font-size: 18px;
-    font-weight: 800;
-    line-height: 21px;
-    color: #4D5AE5;
-    text-decoration: none;
-}
-
-/*LOGO-STUDIO*/
-.webstudio-link-b {
-    color: #2E2F42;
-    font-family: 'Raleway', sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 800;
-    line-height: 21px;       /* 116.667% */
-    letter-spacing: 0.54px;
-    text-transform: uppercase;
-}
-
-
-/*LINKS*/
 a {
     text-decoration: none;
 }
 
-ul, li {
-    font-family: Roboto;
-    list-style: none;
-    padding: 0;
-    margin: 0;
+/*LOGO-WEB*/
+.webstudio-web {
+    text-transform: uppercase;
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 1.3;
+    color: var(--OCEAN);
 }
 
-.link {
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px;
-    /* 150% */
-    letter-spacing: 0.32px;
-    color: #2E2F42;
+/*LOGO-STUDIO*/
+.webstudio-studio {
+    text-transform: uppercase;
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 1.3;
+    letter-spacing: 0.54px;
+    padding-right: 76;
+    color: var(--NAVY-BLUE);
 }
 
-.header-contacts {
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    /* 150% */
-    letter-spacing: 0.32px;
-    color: #2E2F42;
-}
-
-.link:hover {
-    color: #4D5AE5;
-}
-
-.header-contacts:hover {
-    color: #4D5AE5;
-}
-
-/*MAIN-SECTION*/
-
-.main-top {
-    background-color: #2E2F42;
-    align-content: center;
-}
-
-/*MAIN-SECTION BUTTON*/
-
-
-button {
-    /* Button Text */
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    color: #4D5AE5;
-    line-height: 24px;
-    /* 150% */
-    letter-spacing: 0.64px;
-    display: inline-flex;
-    padding: 16px 32px;
+/*HEADER*/
+.page-header {
+    display: flex;
+    width: 1440px;
+    height: 72px;
+    justify-content: center;
     align-items: center;
-    gap: 10px;
+    flex-shrink: 0;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    gap: 40px;
+}
+
+.header-logo {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header-list, 
+.contact-info {
+    gap: 40px;
+    display: flex;
+    list-style: none;
+}
+
+.header-link {
+    font-weight: 500;
+    line-height: 1.5;     /* 150% */
+    letter-spacing: 0.32px;
+    color: var(--NAVY-BLUE);
+    list-style: none;
+}
+
+.header-link:hover,
+.header-link:focus {
+    color: var(--OCEAN);
+}
+
+.active {
+    color: var(--OCEAN);
+}
+
+.contact-info-item {
+    font-weight: 500;
+    line-height: 1.5;     /* 150% */
+    letter-spacing: 0.32px;
+    color: var(--NAVY-BLUE);
+    list-style: none;
+}
+
+
+.contact-info-item:hover,
+.contact-info-item:focus {
+    color: var(--OCEAN);
+}
+
+/*END OF HEADER*/
+
+/*MAIN-PAGE*/
+
+/*DARK-BG SECTION*/
+.dark-bg {
+    width: 1440px;
+    height: 600px;
+    flex-shrink: 0;
+    background-color: var(--NAVY-BLUE);
+    align-items: center;
+    
+}
+
+.main {
+    padding-top: 188px;
+    padding-bottom: 188px;
+    text-align: center;
+}
+
+.main-top-text {
+    color: var(--WHITE);
+    text-align: center;
+    font-size: 56px;
+    font-weight: 700;
+    line-height: 60px;     /* 107.143% */
+    letter-spacing: 1.12px;
+    text-transform: uppercase;
+    
+
 }
 
 .order-service-btn {
-    cursor: pointer;
-    border-radius: 4px margin-bottom: 2px
-}
-
-.order-service-btn:hover {
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    color: var(--WHITE);
+    line-height: 24px;     /* 150% */
+    letter-spacing: 0.64px;
+    
+    background-color: var(--IRIS);
+    border: none;
     border-radius: 4px;
+    color: var(--white);
+    padding: 16px 32px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    color: var(--WHITE, #FFF);
-    background: var(--OCEAN, #404BBF);
-}
 
-h1 {
-    color: #FFF;
-    text-align: center;
-    /* Header 1 */
-    font-family: Roboto;
-    font-size: 56px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 60px;
-    /* 107.143% */
-    letter-spacing: 1.12px;
-}
-
-h2 {
-    color: var(--NAVY-BLUE, #2E2F42);
-    text-align: center;
-    /* Header 2 */
-    font-family: Roboto;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 40px;
-    /* 111.111% */
-    letter-spacing: 0.72px;
-    text-transform: capitalize;
-}
-
-h3 {
-    color: #2E2F42;
-    /* Header 3 */
-    font-family: Roboto;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px;
-    /* 120% */
-    letter-spacing: 0.4px;
-}
-
-p {
-    color: #434455;
-    /* Body */
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    /* 150% */
-    letter-spacing: 0.32px;
-}
-
-/*END OF MAIN*/
-
-/*PORTFOLIO*/
-
-.portfolio-buttons {
-    text-align: center;
     align-items: center;
-    gap: 24px;
-    text-align: center;
+  
 }
-
-.btn {
-    /* Button Text */
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px;
-    /* 150% */
-    letter-spacing: 0.64px;
+.order-service-btn:hover {
+    background-color: var(--CLOUD);
+    border: none;
     border-radius: 4px;
+    color: var(--WHITE);
+    padding: 16px 32px;
+    color: var(--OCEAN);
 }
-
-.btn:hover {
-    color: #FFF;
-    text-align: center;
-    /* Button Text */
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px;
-    /* 150% */
-    letter-spacing: 0.64px;
-    border-radius: 4px;
-    background: #4D5AE5;
-}
-
-/*END OF PORTFOLIO*/
+/*END OF DARK-BG SECTION*/
 
 
+/*MAIN FEATURE*/
 
 
-/*FOOTER*/
-.footer {
-    background: #2E2F42;
-    /* Body */
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    /* 150% */
-    letter-spacing: 0.32px;
-}
+/*END OF MAIN FEATURE*/
 
-.footer p {
-    color: #F4F4FD;
-}
 
-.webstudio-link-bottom {
-    color: #F4F4FD;
-    font-family: Raleway;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 800;
-    line-height: 21px;
-    /* 116.667% */
-    letter-spacing: 0.54px;
-    text-transform: uppercase;
-}
-
-/*END OF FOOTER*/
+/*END OF MAIN-PAGE*/
