--- a/css/styles.css
+++ b/css/styles.css
@@ -11,32 +11,41 @@
 
 body {
     font-family: "Roboto", sans-serif;
+    width: 1440px;
 }
 
 a {
     text-decoration: none;
 }
 
+.container {
+    width: 1440px;
+    height: 2592px;
+}
+
 /*LOGO-WEB*/
-.webstudio-web {
-    text-transform: uppercase;
-    font-family: 'Raleway', sans-serif;
+.webstudio-web-header {
+    color: var(--IRIS);
+    font-family: Raleway;
     font-size: 18px;
+    font-style: normal;
     font-weight: 800;
-    line-height: 1.3;
-    color: var(--OCEAN);
+    line-height: 21px;
+    /* 116.667% */
+    letter-spacing: 0.54px;
+    text-transform: uppercase;
 }
 
 /*LOGO-STUDIO*/
-.webstudio-studio {
-    text-transform: uppercase;
-    font-family: 'Raleway', sans-serif;
-    font-size: 18px;
-    font-weight: 800;
-    line-height: 1.3;
-    letter-spacing: 0.54px;
-    padding-right: 76;
+.webstudio-studio-header{
     color: var(--NAVY-BLUE);
+    font-family: Raleway;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 21px;     /* 116.667% */
+    letter-spacing: 0.54px;
+    text-transform: uppercase;
 }
 
 /*HEADER*/
@@ -48,7 +57,6 @@ a {
     align-items: center;
     flex-shrink: 0;
     padding-top: 24px;
-    padding-bottom: 24px;
     gap: 40px;
 }
 
@@ -90,12 +98,10 @@ a {
     list-style: none;
 }
 
-
 .contact-info-item:hover,
 .contact-info-item:focus {
     color: var(--OCEAN);
 }
-
 /*END OF HEADER*/
 
 /*MAIN-PAGE*/
@@ -106,26 +112,33 @@ a {
     height: 600px;
     flex-shrink: 0;
     background-color: var(--NAVY-BLUE);
-    align-items: center;
+    text-align: center;
     
 }
 
 .main {
-    padding-top: 188px;
-    padding-bottom: 188px;
+    width: 1158px;
+    height: 600px;
+}
+
+.h1 {
+    display: flex;
     text-align: center;
+    justify-content: center;
 }
 
 .main-top-text {
-    color: var(--WHITE);
+    width: 496px;
+    color: var(--WHITE, #FFF);
     text-align: center;
+    /* Header 1 */
+    font-family: Roboto;
     font-size: 56px;
+    font-style: normal;
     font-weight: 700;
-    line-height: 60px;     /* 107.143% */
+    line-height: 60px;
+    /* 107.143% */
     letter-spacing: 1.12px;
-    text-transform: uppercase;
-    
-
 }
 
 .order-service-btn {
@@ -140,13 +153,17 @@ a {
     background-color: var(--IRIS);
     border: none;
     border-radius: 4px;
-    color: var(--white);
+    color: var(--WHITE);
     padding: 16px 32px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-
     align-items: center;
+    display: inline-flex;
+    padding: 16px 32px;
+    align-items: flex-start;
+    gap: 10px;
   
 }
+
 .order-service-btn:hover {
     background-color: var(--CLOUD);
     border: none;
@@ -157,11 +174,184 @@ a {
 }
 /*END OF DARK-BG SECTION*/
 
-
 /*MAIN FEATURE*/
 
+.service {
+    width: 1440px;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    text-align: left;
+    padding-top: 120px;
+    padding-bottom: 120px;
+    
+}
 
+.service-desc {
+    color: var(--SLATE);
+    line-height: 1.5;     /* 150% */
+    letter-spacing: 0.32px;
+    text-align: left;
+
+    display: flex;
+    width: 264px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+}
+
+.main-feature ul li {
+    display: flex;
+    width: 264px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+}
 /*END OF MAIN FEATURE*/
 
 
+/*MAIN-SERVICE*/
+.main-service {
+    width: 1440px;
+    background: #FFF;
+}
+
+.section-title {
+    color: var(--NAVY-BLUE);
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 2.5;     /* 111.111% */
+    letter-spacing: 0.72px;
+}
+
+.service li {
+    display: inline-flex;
+    padding-bottom: 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+}
+/*END OF MAIN-SERVICE*/
+
+
+/*MAIN-TEAM*/
+.main-team {
+    width: 1440px; 
+    /*height: 732px;*/
+    flex-shrink: 0;
+    background: var(--CLOUD);
+    margin-bottom: 0;
+    padding-top: 100px;
+}
+
+.main-team .service li {
+    border-radius: 0px 0px 4px 4px;
+    background: var(--WHITE, #FFF);
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+div .card-content {
+    display: flex;
+    width: 232px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   
+}
+
+.card-content h3 {
+    text-align: center;
+    color: var(--NAVY-BLUE);
+    text-align: center;
+    /* Header 3 */
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    /* 120% */
+    letter-spacing: 0.4px;
+}
+
+.card-content p {
+    color: var(--SLATE);
+    text-align: center;
+    /* Body */
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    /* 150% */
+    letter-spacing: 0.32px;
+}
+/*END OF MAIN-TEAM*/
+
 /*END OF MAIN-PAGE*/
+
+/*FOOTER*/
+.footer-bg{
+    width: 1440px;
+    height: 312px;
+    flex-shrink: 0;
+    background: var(--NAVY-BLUE);
+    padding-top: 100px;
+    padding-left: 156px;
+}
+
+
+.footer-logo {
+    display: flex;
+}
+
+.webstudio-web {
+    display: flex;
+    width: 44px;
+    height: 21px;
+    flex-direction: column;
+    justify-content: center;
+
+    color: var(--IRIS);
+    font-family: Raleway;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 21px;
+    /* 116.667% */
+    letter-spacing: 0.54px;
+    text-transform: uppercase;
+}
+
+.webstudio-studio-footer {
+    display: flex;
+    width: 71px;
+    height: 21px;
+    flex-direction: column;
+    justify-content: center;
+
+    color: var(--CLOUD);
+    font-family: Raleway;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 21px;     /* 116.667% */
+    letter-spacing: 0.54px;
+    text-transform: uppercase;
+}
+
+.footer-bg p {
+    width: 264px;
+    color: var(--CLOUD, #F4F4FD);
+    /* Body */
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    /* 150% */
+    letter-spacing: 0.32px;
+}
+/*END OF FOOTER*/
